@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test
+DEPEND=>=dev-libs/libgaminggear-0.6 x11-libs/gtk+:2 x11-libs/libnotify media-libs/libcanberra virtual/libusb:1 dev-libs/dbus-glib virtual/libgudev:= sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) >=sys-apps/sed-4 virtual/pkgconfig
+DESCRIPTION=Utility for advanced configuration of Roccat devices
+EAPI=5
+HOMEPAGE=http://roccat.sourceforge.net/
+IUSE=input_devices_roccat_arvo input_devices_roccat_isku input_devices_roccat_iskufx input_devices_roccat_kone input_devices_roccat_koneplus input_devices_roccat_konepure input_devices_roccat_konepuremilitary input_devices_roccat_konepureoptical input_devices_roccat_konextd input_devices_roccat_konextdoptical input_devices_roccat_kovaplus input_devices_roccat_lua input_devices_roccat_pyra input_devices_roccat_savu input_devices_roccat_ryosmk input_devices_roccat_ryostkl input_devices_roccat_tyon lua
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=>=dev-libs/libgaminggear-0.6 x11-libs/gtk+:2 x11-libs/libnotify media-libs/libcanberra virtual/libusb:1 dev-libs/dbus-glib virtual/libgudev:=
+REQUIRED_USE=lua? ( input_devices_roccat_ryosmk )
+SLOT=0
+SRC_URI=mirror://sourceforge/roccat/roccat-tools-3.1.0.tar.bz2
+_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	udev	da001465a2e939c93f7ae16947ce3438	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=3c46f256223b1016f6215f80ae2eecba
