@@ -1,13 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX README.gentoo 858 SHA256 4d7ee8978e4e08443eda0ce084db65d5caa99ae22fa8fc25956b9cd712aaf117 SHA512 3f88197dc83d4bf7e3cb8fd71079754ffa355ddf5fcf151304ae439090da44b3bdef3ed9deab44b36ffffb4b28ded2a71b1abffe5d3e1aa87f56bfa264920a7b WHIRLPOOL 2279ce5d4873c8c36e2bf6f433c62ba2eb21fce1b69069918a81583c9dfcafaf9b652f4b4c9e7f0d538af00193f52e5b0eaed29da5d52c2e9108177f847caeb2
-DIST roccat-tools-2.0.0.tar.bz2 2387612 SHA256 cabc2aeb594c3bc21ff1ce7385709b0f041b6f02d6959ac4869b38865398174d SHA512 8e1095d7843c82e93872c4d68f8780180761a5b62ccbba05a7a0278f96c894963808bbfbee7a1f22267b4708df3657d5e29464b654f85cad0d4537ea6ec4d024 WHIRLPOOL b8a69831def6dad9872955c6d067f3d1aed727abe3416d14e492e564244d64fcebf4b8dbca604feb789f84c2ba911457c35784db3537f51d4aa7353c76a1c196
-DIST roccat-tools-2.1.0.tar.bz2 2389234 SHA256 21a9b8ddcc9ee31148e7461bf54c2bdea1f9d9a2478a5afce0345d34a9259f3b SHA512 1970f6fa7b24a459010961bc46d6ec88ef2e433955d7e058e7a365391c72b578bd7c122be54568da4b79768bf93977324280dc1be7b31343746c7113aac404af WHIRLPOOL 4b8a96849bfdef5ab6ecde4d54c82e98d1104ffa4469d2e83ca7d27a8bf3f54d98db21c326b24695d0a2db65c13183976f47f61ee821d9b5e14748ae115f138f
-DIST roccat-tools-2.2.0.tar.bz2 2438531 SHA256 21a473926327716cfd1796234b05168d837d10ddcffd214a7bcc97422519c312 SHA512 918ffd39c02a0da7deecc0d547df7909dbcc631b3c482ef1c7cebb661ef9ecbe69882a82c76e3c3f22d89a57ee9ed7a39e927f675fef6f909a3cdd5f0a63d5cc WHIRLPOOL d200cdd1b064af2b8826ad3c0cc59ee1f4af5cc311a5f05993637703f01543ba1116693f631b163b5cfa5e86ee44e5a56db9d52a644c960ea7527905f9aa485b
 DIST roccat-tools-2.4.0.tar.bz2 2439378 SHA256 e3198f6fc5a35e583d1f3d2d3a59e36bb76b6f68556046bd063db14148904552 SHA512 7612d75805fdfe50f8cdc7f8bcd39dd9816067f607102402394de40084b831a5fdfff92d4737248089bd4386be1dd74f8c99c0518d1c5c029c591fc47cb933ec WHIRLPOOL a59e393ac0f56ea00c15bd5492ca483e4622de821762ef5a21fe74db08ff4c66a67af1b81f29d687ba8f6cb1221b7a5d2b482b25e233f736824e2ead69090364
 DIST roccat-tools-3.0.0.tar.bz2 2441186 SHA256 5ad56dddaabe596f01e7b6f7e84cf7ba9ad6e3d57d65324fbfbd2ee5e134749e SHA512 1b730a8e0abd967dafe7b0878fb04e446e642c1ecbf259c4c932b3174057ef9a1bf3094df51a52f2304c5a213ee67e658e3dc097df136ba85ba380c67dc56056 WHIRLPOOL ce342a5aa6ea3f039bfdb19866114e6915107fa5fdef39a702468673dc6231305a71fb2f41d8b0005f43c84a40d5b3df0785f5b3b6f58dc06f837e8480626c5a
-EBUILD roccat-tools-2.0.0.ebuild 1797 SHA256 dc4991fa5e3ac2083c8c722dc362e26a7941b8594705809b8426b122af26071b SHA512 ed7eefca6d5bb8c35e829b8a1cc8ce53a80c64df216277490f8a26b2ea3b9b8709ae9318166a430818bdb93ee5ce888c099effd6810170b57381dbe969cb6804 WHIRLPOOL cb610763fdd0dbaf80a4d2a344cb82f3a2201ed3f567e8019bc2c24a3ef7c685402598988ad13741cc6d29d2d53659f9554a5454f0840be4d3ac344d2d805809
-EBUILD roccat-tools-2.1.0.ebuild 1797 SHA256 166be1093381747d88d8f5da04e1c1b1a547acd00cffde1b7d0a58fff2a4f425 SHA512 bf41e06f2403ac705bf6d6d49739c93f1318f6490686ad6a70b28c106f5c9c83a4207251358dfe7aeae45a1b280d167fe702a22b3ff97a7d9d4b457e78aae7b2 WHIRLPOOL b39c7bc4c3c6b9ed6cbf3bfcbd228292868cb2e5c002ebccb116b6560eae658ef63ab1646393c088338a5b2f46eec9ef666bbfe4246c63ca09b7e908961ff011
-EBUILD roccat-tools-2.2.0.ebuild 1797 SHA256 258e2ca05417ce57d5a6f9d987d4c0c2afbd9659b3763b0a8bab77e3f67fd8fe SHA512 f8ed845b38bbfb165ec1e14b74fb839492e118de19a4b56b8a9f857d1d2485e7678d88673d516d85cc5e50b1402ebfa82d73ff27abf5a2acae89b909bf094e69 WHIRLPOOL ff7eb10096790a6ab89b071942e5adf07a6db9df9201271727299f7f0452bbf440bd053260463464085b08934cc21b70ad574690899ea771058c2172043048e7
+DIST roccat-tools-3.1.0.tar.bz2 2480073 SHA256 28fe35ccb3e66d73d2d523ccae2d56f87a899ca503934fd92e891856d1fcaac5 SHA512 161e85700cb4a6fc5fb4c5488385c91558fbd96cad68acf028d7cf39d39a77d529c7b9cdcc9d83f0d09bb789a0ff377a1d3d2ff1971a982aef24d89a3f324f7a WHIRLPOOL b5d7e622b3f19da210e13de775e80292cf3a705da4fda8fe369858a60ee14f57354c30c6c369e78e346852f49a4045272b50407e1217cd1a079f6ec4879c50fe
 EBUILD roccat-tools-2.4.0.ebuild 1824 SHA256 aa0f2f1272f874765d6f0e0cd04398a55b2f5fa51833d72a9b84229b7b440b6b SHA512 f4093d9f6bb8e8dfe11863a30604cd6aa763093553eafaeed7324782287eae62b78dd27174f06db3abd3d63a3becf4457eebff58de5a903a5056f4d7246e609d WHIRLPOOL 62b4a54c4b722a314e437b13bdf2450e4c4f2e79f309a03cc5abce43e999f518039d3034927ef5321f79ad4c1ca027339799f499e15b7f7cd0e08dd6d8f0416f
 EBUILD roccat-tools-3.0.0.ebuild 2337 SHA256 038fd434bec52f89200882c57d7556bc631ed34f0ee2fa33eae4ab20c1727a9c SHA512 e8c19ff136c651d77e1d28b5980ccb6f23d59300196d7549e6926f8246bef25fd560e35b3acbe032a778e1d30ecc6a4b3fb65133e54a03ff6ed0583f23e02b75 WHIRLPOOL 102c6f8c627f69f44d46141a1b5302011086e051f462a89e490714cacd3a68e16c81d6474a653f8483ddb5dfc3ea413bf20b9319a1029571841aaacf2ea36553
-MISC ChangeLog 3256 SHA256 7a4ae6f2cc8f546a64338206a1f37edc00d674d8a42d9526d95e8f57f39ad409 SHA512 e8163e4b2ef0f12c10c5530cb519de9975e49fc0f2fbf04ee4a2cb46ae38b5208ff7ac15b3b6650ba172f0ce52ca25825f138206cb6b81c55d8c29d518b01a11 WHIRLPOOL 7584aa8566a0e7cebb14671adbbe82b8f421ad7bf3c885c9652d69139845e12cc7cbe4ecd1a80d1a30d2dd78e78695edd4ad7e10a452aa53e1c65a81d08c7335
-MISC metadata.xml 428 SHA256 33c7bba1903905b59f0864161135269c047be4b2ec7f6e0cc7f2390ea8a0c684 SHA512 492b4d2dd81acc310050cd4e54bd3937ea8f4533485030f2ef3a79220300adef9fce10e81a3dc9f82cd8fbe9c20998646b4f85614686978cd5bb64e36f9c8e94 WHIRLPOOL 58cec6ff2101253134be2de54a2baa3ab4963833ff9c2e8c463858233a8e8310607fe53e8bb6ff50faf8c018767dda5382ff3a1cd3798dc8c5526520c3ae609b
+EBUILD roccat-tools-3.1.0.ebuild 2366 SHA256 1cfa0bfb0d85558c07d25053d5eea8c412d6e1b47a1643bc223b7dbd5fae3a9c SHA512 262e8e2d07da0467a04454b0f29bcf2f29cef2fc2cf0d3c58699edaf5b6442ff57c4505a7aa9d4aa44b227991a39f2b5192a8db03fd0d2e3ec3983f653606638 WHIRLPOOL 115fe1f8dbfdd79d1c4403a5009e89ce290c7daa433b00e3ef5486e88eee1942477ee95b2edadaf31beff0b3d8db6595f1d4452c1356f11733835d49c0e51cb2
+MISC ChangeLog 3503 SHA256 065170c172eb9c03cc861141f1face593f988018783385b3c858cf869417179f SHA512 09d03bfc5d1caef8459e9fb6ec82a786bfb4e174a5e07deead507d5b14a5fb5c0cd8b33781bc63576eb8feb0fde8a4e9a1b147f15648ac9c303cea5c33ef9b2d WHIRLPOOL fc244f2a77ee5c795e6d1f89bddbb96478679a8f8bdf34d946a571f50b4186c42512fa0e257c8c18130348c2c02137bcd2bc38b59b651111561666eeec6e10c0
+MISC metadata.xml 436 SHA256 c74b4da3cf150746221b3f9eb6a634c85faa54494522d0216c4ab3c64cd2a77b SHA512 cb79ca2536b0ebbf1133701ac6a8631e38fafb76e3edf9923869d86f8c2a62cb9d2fd73e6557ebe33b77499c2585cc0350c9951a3f73bd8b27228aaaf91d6b66 WHIRLPOOL b0e849cfac48cfab13483955012e89797dbe00158e929bb3986929092757ae702e1dc8bd44d67a08a18be3d2a1113602b55f5a5542324a2dc612111bd77e666c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlT+psMACgkQso7CE7gHKw24fwCg3Y4JEO8CFIVEN4aFsFotaJgN
+b90An1nF9Z+0Mqk99Yh5jZideencyhRW
+=3tLU
+-----END PGP SIGNATURE-----
