@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/roccat-tools
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/roccat-tools/ChangeLog,v 1.14 2015/02/21 14:28:25 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/roccat-tools/ChangeLog,v 1.15 2015/03/10 08:09:25 idella4 Exp $
+
+*roccat-tools-3.1.0 (10 Mar 2015)
+
+  10 Mar 2015; Ian Delaney <idella4@gentoo.org> +roccat-tools-3.1.0.ebuild,
+  -roccat-tools-2.0.0.ebuild, -roccat-tools-2.1.0.ebuild,
+  -roccat-tools-2.2.0.ebuild, metadata.xml:
+  bump; rm old, fixes bug #541590
 
 *roccat-tools-3.0.0 (21 Feb 2015)
 
